<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HM1</string>
    <string name="menu_settings">Settings</string>
	<string name="not_available">Not Available</string>
	<string name="linear_acceleration">Linear Acceleration</string>
	<string name="x">X:</string>
	<string name="y">Y:</string>
	<string name="z">Z:</string>
	<string name="azimuth">Azimuth</string>
	<string name="light">Light</string>
	<string name="pressure">pressure</string>
	<string name="qr_scan">QR Scan</string>
	<string name="enter_text_to_generate">Enter Text to Generate</string>
	<string name="qr_generate">QR Generate</string>
	
</resources>